--- a/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -215,7 +215,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Mannequins/Animations/Manny
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/BehaviorTrees
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -254,6 +254,8 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -332,10 +334,18 @@ BP_ThirdPersonCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Collision.B
 BTDecorator_CheckGameplayTagsOnActor="\"Object\" "
 StaticMeshComponent="\"Object\" "
 BTTask_ClearBlackboardValue_C="\"Object\" "
+ArrowComponent="\"Object\" "
+AIBehavior_C="\"Object\" "
+BTTask_Patrol_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=Behavior Tree
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
@@ -344,9 +354,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=Behavior Tree
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -724,7 +732,7 @@ StaticMeshComponent.Sockets=True
 StaticMeshComponent.StaticMesh=True
 StaticMeshComponent.Materials=True
 StaticMeshComponent.ComponentTick=True
-StaticMeshComponent.Physics=True
+StaticMeshComponent.Physics=False
 StaticMeshComponent.Collision=True
 StaticMeshComponent.HLOD=True
 StaticMeshComponent.Lighting=True
@@ -742,25 +750,67 @@ AIController_PerceptionNPC_C.Default=True
 BTTask_ClearBlackboardValue_C.Task=True
 BTTask_ClearBlackboardValue_C.Description=True
 BTTask_ClearBlackboardValue_C.Default=True
+AIObject_PatrolPathPoint_C.Tick=True
+AIObject_PatrolPathPoint_C.Replication=True
+AIObject_PatrolPathPoint_C.Rendering=True
+AIObject_PatrolPathPoint_C.Collision=True
+AIObject_PatrolPathPoint_C.Actor=True
+AIObject_PatrolPathPoint_C.Input=True
+AIObject_PatrolPathPoint_C.HLOD=True
+AIObject_PatrolPathPoint_C.Physics=True
+AIObject_PatrolPathPoint_C.WorldPartition=True
+AIObject_PatrolPathPoint_C.Events=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.HLOD=True
+ArrowComponent.Rendering=True
+ArrowComponent.ComponentTick=True
+ArrowComponent.PathTracing=True
+ArrowComponent.Navigation=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
+AIObject_PatrolPathPoint_C.TransformCommon=True
+AIObject_PatrolPathPoint_C.Networking=True
+AIBehavior_C.ComponentTick=True
+AIBehavior_C.Tags=True
+AIBehavior_C.ComponentReplication=True
+AIBehavior_C.Activation=True
+AIBehavior_C.Variable=True
+AIBehavior_C.Cooking=True
+AIBehavior_C.Sockets=True
+AIBehavior_C.Events=True
+AIBehavior_C.Default=True
+BTTask_Patrol_C.Task=True
+BTTask_Patrol_C.Description=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
-MRUItem1=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem2=/Game/Characters/Mannequins/Animations/Manny/MM_Land
-MRUItem3=/Game/Blueprints/AITasks/BTTask_ClearBlackboardValue
-MRUItem4=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
-MRUItem5=/Game/Blueprints/AICharacters/BP_SimpleNPC
-MRUItem6=/Game/Blueprints/Actors/BP_Semaforo
-MRUItem7=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem9=/Game/Blueprints/Decorators/BTDecorator_CheckScale
-MRUItem10=/Game/Blueprints/Blackboards/BB_SimpleNPC
-MRUItem11=/Game/Blueprints/AIControllers/AIController_SimpleNPC
-MRUItem12=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
-MRUItem13=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem14=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem15=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
-MRUItem16=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem1=/Game/Blueprints/AITasks/BTTask_Patrol
+MRUItem2=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
+MRUItem3=/Game/Blueprints/AICharacters/BP_SimpleNPC
+MRUItem4=/Game/Blueprints/Actors/AIBehavior
+MRUItem5=/Game/Blueprints/Actors/AIObject_PatrolPathPoint
+MRUItem6=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem7=/Game/Characters/Mannequins/Animations/Manny/MM_Land
+MRUItem8=/Game/Blueprints/AITasks/BTTask_ClearBlackboardValue
+MRUItem9=/Game/Blueprints/Actors/BP_Semaforo
+MRUItem10=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem12=/Game/Blueprints/Decorators/BTDecorator_CheckScale
+MRUItem13=/Game/Blueprints/Blackboards/BB_SimpleNPC
+MRUItem14=/Game/Blueprints/AIControllers/AIController_SimpleNPC
+MRUItem15=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
+MRUItem16=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem17=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem18=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
+MRUItem19=/Game/Characters/Mannequins/Animations/ABP_Quinn
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn=1
@@ -779,6 +829,9 @@ MRUItem16=/Game/Characters/Mannequins/Animations/ABP_Quinn
 /Game/Blueprints/Decorators/BTDecorator_CheckScale.BTDecorator_CheckScale=1
 /Game/Blueprints/Actors/BP_Semaforo.BP_Semaforo=1
 /Game/Characters/Mannequins/Animations/Manny/MM_Land.MM_Land=1
+/Game/Blueprints/Actors/AIObject_PatrolPathPoint.AIObject_PatrolPathPoint=1
+/Game/Blueprints/Actors/AIBehavior.AIBehavior=1
+/Game/Blueprints/AITasks/BTTask_Patrol.BTTask_Patrol=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
@@ -844,6 +897,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Actors/AIObject_PatrolPathPoint.AIObject_PatrolPathPoint;
 RecentlyPlaced=/Game/Blueprints/Actors/BP_Semaforo.BP_Semaforo;
 RecentlyPlaced=/Game/Blueprints/AICharacters/BP_SimpleNPC.BP_SimpleNPC;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -863,7 +917,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=151.200
-WindowSize=X=1291.200 Y=731.200
+WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1956,6 +2010,10 @@ Voice.TimeStamp=2024.05.11-05.47.57
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2024.05.11-05.47.46
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintScreenshotTool.TimeStamp=2024.05.11-06.58.19
+BlueprintScreenshotTool.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2024.05.11-05.47.41
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1967,16 +2025,26 @@ SkeletalMeshComponent=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Col
 CapsuleComponent=
 StaticMeshActor=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 BP_Semaforo_C=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
-SceneComponent=
+SceneComponent=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+AIBehavior_C=
+AIObject_PatrolPathPoint_C=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+K2Node_VariableGet=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+BTTask_Patrol_C=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+K2Node_VariableSet=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+PropertyWrapper=
+K2Node_Variable=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+K2Node_CustomEvent=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+K2Node_MacroInstance=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+K2Node_CallFunction=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 
 [PluginBrowser]
-InstalledPlugins=VisualStudioTools
 InstalledPlugins=BlueprintScreenshotTool
+InstalledPlugins=VisualStudioTools
 InstalledPlugins=WMFCodecs
 
 [MessageLog]
 LastLogListing=PIE
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
