--- a/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5IA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -215,7 +215,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/BehaviorTrees
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -337,15 +337,19 @@ BTTask_ClearBlackboardValue_C="\"Object\" "
 ArrowComponent="\"Object\" "
 AIBehavior_C="\"Object\" "
 BTTask_Patrol_C="\"Object\" "
+UserDefinedEnum="\"Object\" "
+Enum="\"Object\" "
+Field="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
@@ -789,28 +793,32 @@ BTTask_Patrol_C.Description=True
 K2Node_CustomEvent.GraphNodeDetail=True
 K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
+BTTask_Patrol_C.Default=True
+UserDefinedEnum.Description=True
+UserDefinedEnum.Enumerators=True
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Blueprints/AIControllers/AIController_PerceptionNPC
-MRUItem1=/Game/Blueprints/AITasks/BTTask_Patrol
-MRUItem2=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
-MRUItem3=/Game/Blueprints/AICharacters/BP_SimpleNPC
-MRUItem4=/Game/Blueprints/Actors/AIBehavior
-MRUItem5=/Game/Blueprints/Actors/AIObject_PatrolPathPoint
-MRUItem6=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem7=/Game/Characters/Mannequins/Animations/Manny/MM_Land
-MRUItem8=/Game/Blueprints/AITasks/BTTask_ClearBlackboardValue
-MRUItem9=/Game/Blueprints/Actors/BP_Semaforo
-MRUItem10=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
-MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem12=/Game/Blueprints/Decorators/BTDecorator_CheckScale
-MRUItem13=/Game/Blueprints/Blackboards/BB_SimpleNPC
-MRUItem14=/Game/Blueprints/AIControllers/AIController_SimpleNPC
-MRUItem15=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
-MRUItem16=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem17=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem18=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
-MRUItem19=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem1=/Game/Blueprints/Actors/AIBehavior
+MRUItem2=/Game/Blueprints/AICharacters/BP_SimpleNPC
+MRUItem3=/Game/Blueprints/Enums/E_PathResult
+MRUItem4=/Game/Blueprints/AITasks/BTTask_Patrol
+MRUItem5=/Game/Blueprints/BehaviorTrees/BT_SimpleNPC
+MRUItem6=/Game/Blueprints/Actors/AIObject_PatrolPathPoint
+MRUItem7=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem8=/Game/Characters/Mannequins/Animations/Manny/MM_Land
+MRUItem9=/Game/Blueprints/AITasks/BTTask_ClearBlackboardValue
+MRUItem10=/Game/Blueprints/Actors/BP_Semaforo
+MRUItem11=/Game/Blueprints/AITasks/BTTask_MoveToRandomLoc
+MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem13=/Game/Blueprints/Decorators/BTDecorator_CheckScale
+MRUItem14=/Game/Blueprints/Blackboards/BB_SimpleNPC
+MRUItem15=/Game/Blueprints/AIControllers/AIController_SimpleNPC
+MRUItem16=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
+MRUItem17=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem18=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem19=/Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop
+MRUItem20=/Game/Characters/Mannequins/Animations/ABP_Quinn
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn=1
@@ -832,6 +840,7 @@ MRUItem19=/Game/Characters/Mannequins/Animations/ABP_Quinn
 /Game/Blueprints/Actors/AIObject_PatrolPathPoint.AIObject_PatrolPathPoint=1
 /Game/Blueprints/Actors/AIBehavior.AIBehavior=1
 /Game/Blueprints/AITasks/BTTask_Patrol.BTTask_Patrol=1
+/Game/Blueprints/Enums/E_PathResult.E_PathResult=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
@@ -917,7 +926,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=151.200
-WindowSize=X=1296.000 Y=736.000
+WindowSize=X=1297.600 Y=737.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2029,13 +2038,14 @@ SceneComponent=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.
 AIBehavior_C=
 AIObject_PatrolPathPoint_C=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 K2Node_VariableGet=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
-BTTask_Patrol_C=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+BTTask_Patrol_C=
 K2Node_VariableSet=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
-PropertyWrapper=
+PropertyWrapper=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 K2Node_Variable=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 K2Node_CustomEvent=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 K2Node_MacroInstance=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 K2Node_CallFunction=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
+K2Node_FunctionResult=BP_SimpleNPC_C.Physics.ConstraintsGroup,BP_SimpleNPC_C.Collision.Collision
 
 [PluginBrowser]
 InstalledPlugins=BlueprintScreenshotTool
@@ -2047,4 +2057,7 @@ LastLogListing=PIE
 
 [SelectionDetails]
 PreserveScaleRatio=False
+
+[DetailCategoriesAdvanced]
+UserDefinedEnum.Enumerators=True
 
